Content view on mobile devices fixed

--- a/css/main.less
+++ b/css/main.less
@@ -545,22 +545,37 @@ ul {
 
 /*#region eg-content-editor*/
  
- .eg-content-editor {
-     margin: 15px 0;
+.eg-content-editor {
+    margin: 15px 0;
 
-     .column {
-         padding: 0 20px;
+    .column {
+        display: inline-block;
+        padding: 0 20px;
+        vertical-align: top;
 
-         &:first-child {
-             padding-left: 0;
-         }
- 
-         &:last-child {
-             padding-right: 0;
-         }
+        &:first-child {
+            padding-left: 0;
+        }
 
-         @media (max-width: 768px) {
-            /* three items */
+        &:last-child {
+            padding-right: 0;
+        }
+
+        /* two columns */
+        &:nth-child(1):nth-last-child(2),
+        &:nth-child(2):nth-last-child(1) {
+            width: 50%;
+        }
+
+        /* three columns */
+        &:nth-child(1):nth-last-child(3),
+        &:nth-child(2):nth-last-child(2),
+        &:nth-child(3):nth-last-child(1) {
+            width: 33%;
+        }
+
+        @media (max-width: 768px) {
+            /* three columns */
             &:nth-child(1):nth-last-child(3),
             &:nth-child(2):nth-last-child(2),
             &:nth-child(3):nth-last-child(1) {
@@ -575,23 +590,29 @@ ul {
         }
 
         @media (max-width: 640px) {
-            /* two items */
+            /* two columns */
             &:nth-child(1):nth-last-child(2),
             &:nth-child(2):nth-last-child(1) {
                 width: 100% !important;
                 padding: 0;
             }
-    
+
             &:nth-child(1):nth-last-child(2) {
                 margin-bottom: 30px;
             }
         }
-     }
 
-     .image-wrapper {
-         margin: 0; 
-     }
- }
+        .row {
+            &:not(:last-child) {
+                margin-bottom: 15px;
+            }
+        }
+    }
+
+    .image-wrapper {
+        margin: 0; 
+    }
+}
  
 /*#endregion .eg-content-editor*/
 
